# vocabulary

./: README.md
.github/workflows/: release.yml
docs/(fide-vocabulary)/: index.mdx  quickstart.mdx
docs/definitions/: action.mdx  bool-literal.mdx  concept.mdx  creative-work.mdx  cryptographic-account.mdx  date-literal.mdx  date-time-literal.mdx  decimal-literal.mdx  directional-property.mdx  duration-literal.mdx  event.mdx  index.mdx  integer-literal.mdx  json-literal.mdx  meta.json  network-resource.mdx  organization.mdx  person.mdx  physical-object.mdx  place.mdx  platform-account.mdx  software-agent.mdx  statement.mdx  symmetric-property.mdx  text-literal.mdx  time-literal.mdx  uri-literal.mdx  year-literal.mdx  year-month-literal.mdx
docs/sdk/: meta.json
docs/sdk/javascript/: get-fide-entity-type-spec-by-code.mdx  get-fide-entity-type-spec-by-name.mdx  index.mdx  list-fide-entity-types.mdx  meta.json
scripts/generate-docs/: definitions-pages.mjs  sdk-reference.mjs
scripts/generate-sdk/: spec-module.mjs  spec_module.py
sdk/javascript/: README.md  package.json
sdk/javascript/src/: index.ts
sdk/javascript/src/spec/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/chris_test_vocabulary/: __init__.py  spec.py
spec/: README.md
spec/v0/: vocabulary.json
