[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "chris-test-vocabulary"
version = "0.0.0a0"
description = "Fide Vocabulary SDK (v0) — Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Fide Holdings, Inc." }]
keywords = ["fide", "fide-context-protocol", "fide-id", "vocabulary", "entity-vocabulary"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://fide.work/docs/vocabulary"
Repository = "https://github.com/fide/vocabulary"

[project.optional-dependencies]
dev = ["build>=1.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/chris_test_vocabulary"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
